remove pyprojroot from solutions

--- a/solutions/01_preprocessing_solutions.ipynb
+++ b/solutions/01_preprocessing_solutions.ipynb
@@ -16,7 +16,6 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from pyprojroot import here\n",
     "from string import punctuation"
    ]
   },
@@ -28,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Use here to create the filepath\n",
-    "text_path = here('data/sowing_and_reaping.txt')\n",
+    "text_path = '../data/sowing_and_reaping.txt')\n",
     "\n",
     "# Open and read the text\n",
     "with open(text_path, 'r') as file:\n",
@@ -48,7 +47,7 @@
     "# Import pandas\n",
     "import pandas as pd\n",
     "# Use pandas to import Tweets\n",
-    "csv_path = here('data/airline_tweets.csv')\n",
+    "csv_path = '../data/airline_tweets.csv')\n",
     "tweets = pd.read_csv(csv_path, sep=',')"
    ]
   },
@@ -59,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example2_path = here('data/example2.txt')\n",
+    "example2_path = '../data/example2.txt')\n",
     "\n",
     "with open(example2_path) as file:\n",
     "    example2 = file.read()"
@@ -132,7 +131,7 @@
     "# The os package has useful tools for file manipulation\n",
     "import os\n",
     "# Amazon review folder\n",
-    "amazon_path = here('data/amazon')\n",
+    "amazon_path = '../data/amazon')\n",
     "# List all the files in the amazon folder\n",
     "files = os.listdir(amazon_path)\n",
     "# Column names for each file\n",
