--- a/solutions/02_bag_of_words_solutions.ipynb
+++ b/solutions/02_bag_of_words_solutions.ipynb
@@ -15,7 +15,6 @@
     "\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from pyprojroot import here\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
@@ -34,7 +33,7 @@
    "source": [
     "# Import pandas\n",
     "# Use pandas to import tweets\n",
-    "tweets_path = here('data/airline_tweets.csv')\n",
+    "tweets_path = '../data/airline_tweets.csv')\n",
     "tweets = pd.read_csv(tweets_path, sep=',')"
    ]
   },
