--- a/solutions/03_word_embeddings_solutions.ipynb
+++ b/solutions/03_word_embeddings_solutions.ipynb
@@ -23,7 +23,6 @@
     "\n",
     "from gensim.models import Word2Vec\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from pyprojroot import here\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegressionCV"
    ]
@@ -208,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets_path = here('data/airline_tweets.csv')\n",
+    "tweets_path = '../data/airline_tweets.csv')\n",
     "tweets = pd.read_csv(tweets_path, sep=',')"
    ]
   },
