--- a/lessons/01_preprocessing.ipynb
+++ b/lessons/01_preprocessing.ipynb
@@ -5,14 +5,8 @@
    "id": "d3e7ea21-6437-48e8-a9e4-3bdc05f709c9",
    "metadata": {},
    "source": [
-    "# Python Text Analysis: Fundamentals, Part 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6493266-b5e3-4131-8837-9d2ab8c8dd02",
-   "metadata": {},
-   "source": [
+    "# Python Text Analysis: Fundamentals, Part 1\n",
+    "\n",
     "In this workshop series, we'll establish building blocks for performing text analysis in Python. These techniques lie in the domain of *natural language processing*, where we apply computational techniques to language written by humans in order to explain some of the underlying structure.\n",
     "\n",
     "So, the million dollar question: How exactly do we go about performing computational methods on words?\n",
@@ -27,14 +21,8 @@
    "id": "8c8914f4-9783-4661-9cc9-32daca53e1fd",
    "metadata": {},
    "source": [
-    "# Importing Text Files "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "02b5a016-c4ac-433d-8a06-58ebbd0bd976",
-   "metadata": {},
-   "source": [
+    "## Importing Files Containing Text\n",
+    "\n",
     "Text data we want to analyze will be stored in external files that need to be imported. These files will generally be text files (`.txt`) or comma separated value files (`.csv`).\n",
     "\n",
     "All the data used in this notebook are stored in a `data` folder that we need to access. We need to adjust our filepaths accordingly:"
@@ -55,7 +43,7 @@
    "id": "b462052f-766c-434c-a262-efa7326d61c0",
    "metadata": {},
    "source": [
-    "## Text Files\n",
+    "### Text Files\n",
     "\n",
     "We'll first start by importing \"Sowing and Reaping\" by Frances Harper, which is stored in a text file. Python has built-in functionality for importing text files:"
    ]
@@ -96,11 +84,25 @@
    "id": "414ef3f4-1c0c-4c79-918f-72175a1292d3",
    "metadata": {},
    "source": [
-    "## Challenge 1: Working with Strings\n",
+    "---\n",
+    "\n",
+    "### Challenge 1: Working with Strings\n",
     "\n",
     "* What type of object is `sowing_and_reaping`?\n",
     "* How many characters are in `sowing_and_reaping`?\n",
-    "* How can we get the first 1000 characters of `sowing_and_reaping`?"
+    "* How can we get the first 1000 characters of `sowing_and_reaping`?\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e693ebf0-6d66-4650-b825-e27f6860a8b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -108,14 +110,8 @@
    "id": "d97e1de5-7cc6-4861-9ca9-0b58996d25f2",
    "metadata": {},
    "source": [
-    "## Comma Separated Value (CSV) Files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b38f7db8-ecf6-4331-a26b-8a033f5731d0",
-   "metadata": {},
-   "source": [
+    "### Comma Separated Value (CSV) Files\n",
+    "\n",
     "Often, we may have data stored in \"dataframes\" or \"tables\", which consists of many samples (rows), each containing several features (columns). Among the features is likely a text column which contains the text of interest. These dataframes are often found as Comma Separated Value (CSV) files (and somewhat less frequently as tab separated value (TSV) files). In either case, there is some \"delimiter\" (i.e., a comma or tab) which helps separate entries from each other.\n",
     "\n",
     "The `pandas` package is the best package for dealing with dataframes in Python, and this package comes with its own function for reading CSV files. For example, let's read in a file containing many Tweets about airlines:"
@@ -170,14 +166,18 @@
    "id": "3972dfc7-ddb4-486e-ac48-d5a7593f7b91",
    "metadata": {},
    "source": [
-    "## Challenge 2: Reading in Many Files\n",
+    "---\n",
+    "\n",
+    "### Challenge 2: Reading in Many Files\n",
     "\n",
     "The `data` folder contains another folder called `amazon`, which contains many `csv` files of Amazon reviews. Use a `for` loop to read in each dataframe. Do the following:\n",
     "\n",
     "* We've provided a path to the `amazon` folder, and a list of all the file names within the folder using the `os.listdir()` function.\n",
     "* Iterate over all these files, and import them using `pd.read_csv()`. You will need to use `os.path.join()` to create the correct path. Additionally, you need to provide `pandas` with the column names since they are not included in the reviews. We have create the `column_names` variable for you.\n",
     "* Extract the text column from each dataframe, and add then to the `reviews` list. \n",
-    "* How many totals reviews do you obtain?"
+    "* How many totals reviews do you obtain?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -236,14 +236,8 @@
    "id": "89e88f2b-bdaa-4c28-ad13-4e790ccb6827",
    "metadata": {},
    "source": [
-    "# Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e967e45d-2cef-4c12-9584-95b8e196f02e",
-   "metadata": {},
-   "source": [
+    "## Preprocessing\n",
+    "\n",
     "Our goal is to convert a text representation to a numerical representation. However, language can be messy. There's a variety of preprocessing steps that we'd like to do before we get to the numerical representation.\n",
     "\n",
     "We will largely be using a package called Natural Language Toolkit, or `nltk`, to perform these operations. In some cases, we'll use basic Python.\n",
@@ -256,14 +250,8 @@
    "id": "c7fd3c0c-844b-4297-9edb-32bb441af9ec",
    "metadata": {},
    "source": [
-    "## Installing `nltk`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e25bc2e-bd3d-488e-a9c4-7db18111ee5e",
-   "metadata": {},
-   "source": [
+    "### Installing `nltk`\n",
+    "\n",
     "If this is your first time using `nltk`, we'll go through a couple steps to get set up. First, install `nltk` if you have not already:"
    ]
   },
@@ -275,7 +263,7 @@
    "outputs": [],
    "source": [
     "# Run if you do not have nltk installed\n",
-    "!pip install nltk"
+    "%pip install nltk"
    ]
   },
   {
@@ -303,14 +291,8 @@
    "id": "3915028e-7ab1-4851-80f1-185da224cc52",
    "metadata": {},
    "source": [
-    "## Text Cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "52910885-bcfa-4093-9c07-0634f6ea3200",
-   "metadata": {},
-   "source": [
+    "### Text Cleaning\n",
+    "\n",
     "\"Text cleaning\" is a catch-all term for the process of performing relatively simple tasks in order to normalize our code. Text cleaning can mean a variety of different things depending on your use case."
    ]
   },
@@ -321,14 +303,8 @@
     "tags": []
    },
    "source": [
-    "### A Brief Introduction to Regular Expressions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b921d36-433d-452f-9d63-16c1050dfc02",
-   "metadata": {},
-   "source": [
+    "#### A Brief Introduction to Regular Expressions\n",
+    "\n",
     "Before we dive into the specific text cleaning processes, let's briefly introduce regular expressions. We do this here since many text cleaning steps may require regular expressions, and many NLP libraries heavily use them under the hood.\n",
     "\n",
     "Regular expressions (regexes) are a powerful way of searching for specific string patterns in large corpora. They have an infamously steep learning curve, but are very efficient when you get a handle on them.\n",
@@ -400,7 +376,7 @@
    "id": "91ebae34-7b23-49a9-8aad-8f49cb55f320",
    "metadata": {},
    "source": [
-    "### Lowercasing\n",
+    "#### Lowercasing\n",
     "\n",
     "While there is often information in the \"casing\" of words (e.g., whether text is lowercase or uppercase), we often don't work in a regime where we're able to properly leverage this information. So, a common text cleaning step is to lowercase all text, in order to simplify our analysis.\n",
     "\n",
@@ -434,14 +410,8 @@
    "id": "39654022-c93b-4bf5-9a63-efaf2b8125c3",
    "metadata": {},
    "source": [
-    "### Removing Punctuation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7187439-ae54-4fa1-887d-f91921909cbe",
-   "metadata": {},
-   "source": [
+    "#### Removing Punctuation\n",
+    "\n",
     "Sometimes, you might want to keep only the alphanumeric characters (i.e. the letters and numbers) and ditch the punctuation. This becomes less common when we consider more advanced NLP algorithms. In many cases, you may do this step *after* tokenization, which we will discuss in the next section. "
    ]
   },
@@ -473,14 +443,8 @@
    "id": "3a2f9bba-e2a5-4839-b017-f979a09752a1",
    "metadata": {},
    "source": [
-    "### Stripping Blank Spaces"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "99e7e296-d4ae-49f7-b899-2e078a2569f2",
-   "metadata": {},
-   "source": [
+    "#### Stripping Blank Spaces\n",
+    "\n",
     "Removing blank space is a common step, as we might come across text with extraneous blank space. This is particularly common when text is imported from messy places, like webpages.\n",
     "\n",
     "Python has a built-in function to deal with blank space on the *ends* of strings:"
@@ -550,14 +514,8 @@
    "id": "5e2a168e-e2e0-46c0-b794-fa0ecae400dc",
    "metadata": {},
    "source": [
-    "### Removing URLs, Hashtags, and Numbers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4320c777-984f-4c36-a479-229d060fdf22",
-   "metadata": {},
-   "source": [
+    "#### Removing URLs, Hashtags, and Numbers\n",
+    "\n",
     "Text containing non-alphabetic symbols may have additional meaning beyond simply using punctuation or numbers. For example, text may contain URLs, hashtags, or numbers. Each of these are informative in their own right.\n",
     "\n",
     "However, we rarely care about the exact URL used in a tweet. Similarly, we might not care about specific hashtags, or the precise number used. While, we could remove them completely, it's often informative to know that there *exists* a URL, hashtag, or number.\n",
@@ -587,7 +545,7 @@
    "outputs": [],
    "source": [
     "# URL \n",
-    "url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "url_pattern = r'(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])'\n",
     "url_repl = ' URL '\n",
     "re.sub(url_pattern, url_repl, url_tweet)"
    ]
@@ -625,7 +583,9 @@
    "id": "8a288b9a-a33a-48be-bac4-93ffd39318ec",
    "metadata": {},
    "source": [
-    "What other kinds of text strings can you think of that we might want to replace?"
+    "What other kinds of text strings can you think of that we might want to replace?\n",
+    "\n",
+    "Natural language is complex, and so there may be use cases where we might need specialized packages for preprocessing or removing text. For example, the [`emoji` package](https://pypi.org/project/emoji/) may be useful for social media text. The [`textacy` package](https://textacy.readthedocs.io/en/latest/) also provides useful preprocessing tools."
    ]
   },
   {
@@ -633,7 +593,9 @@
    "id": "92f5e64f-c6a0-447b-973e-a48e9eb80ade",
    "metadata": {},
    "source": [
-    "## Challenge 3: Text Cleaning with Multiple Steps\n",
+    "---\n",
+    "\n",
+    "### Challenge 3: Text Cleaning with Multiple Steps\n",
     "\n",
     "In Challenge 1, we imported many Amazon reviews, and stored them in a variable called `reviews`. Each element of the list is a string, representing the text of a single review. For each review:\n",
     "\n",
@@ -641,7 +603,9 @@
     "* Make all characters lower case.\n",
     "* Strip all blankspace.\n",
     "\n",
-    "Keep in mind: the order in which you do these steps matters!"
+    "Keep in mind: the order in which you do these steps matters!\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -661,14 +625,8 @@
    "id": "bacc7c15-1bc7-47cd-b668-ab57634c8b04",
    "metadata": {},
    "source": [
-    "## Tokenization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c2b5c07-0232-47c5-b792-f074f815533f",
-   "metadata": {},
-   "source": [
+    "## Tokenization\n",
+    "\n",
     "One of the most important steps in text analysis is tokenization. This is the process of breaking down the text into \"tokens\", which are distinct chunks that we recognize as unique in whatever corpus we're working in.\n",
     "\n",
     "Let's start by importing an example file:"
@@ -762,7 +720,16 @@
    "outputs": [],
    "source": [
     "# Install spaCy if necessary\n",
-    "!pip install spacy\n",
+    "%pip install spacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e4dbd6-46fa-477b-af86-63913670123e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!python -m spacy download en_core_web_sm"
    ]
   },
@@ -798,11 +765,25 @@
    "id": "b8e2147b-841e-4a1f-97f1-fd64f23eb118",
    "metadata": {},
    "source": [
-    "## Challenge 4: Tokenizing a Large Text\n",
+    "---\n",
+    "\n",
+    "### Challenge 4: Tokenizing a Large Text\n",
     "\n",
     "Tokenize \"Sowing and Reaping\", which we imported at the beginning of this workshop. Use a method of your choice.\n",
     "\n",
-    "Once you've tokenized, find all the unique words types (you might want the `set` function). Then, sort the resulting `set` object to create a vocabulary (you might want to use the `sorted` function)."
+    "Once you've tokenized, find all the unique words types (you might want the `set` function). Then, sort the resulting `set` object to create a vocabulary (you might want to use the `sorted` function).\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1678051-ecc8-4210-9547-4884598a048a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -810,14 +791,8 @@
    "id": "61259cad-3b35-4ce9-89b3-77ba8283bc18",
    "metadata": {},
    "source": [
-    "## Removing Stop Words"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee13e689-86cf-4561-91d2-9af97d86559a",
-   "metadata": {},
-   "source": [
+    "## Removing Stop Words\n",
+    "\n",
     "Text often has words that are very common and usually not informative. These words tend to be pronouns or articles, such as \"the\", \"a\", \"it\", \"them\", etc. In many cases, these \"stop words\" are those that we may wish to remove before performing computation since they usually are not very informative. \n",
     "\n",
     "In practice, this is simple to do - we just filter out tokens by words. However, we may want to use different \"stop word lists\", depending on our use case. For example, `nltk` has a stop word list:"
@@ -873,14 +848,8 @@
    "id": "bd7692ad-8545-435f-b0cd-80f13ffff209",
    "metadata": {},
    "source": [
-    "## Stemming and Lemmatization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4ce5708-cd9d-46ff-a149-25799bb9f0f1",
-   "metadata": {},
-   "source": [
+    "## Stemming and Lemmatization\n",
+    "\n",
     "Stemming and lemmatization both refer to removing morphological affixes on words. Many words consist of a \"core\" word with a modified ending that adjusts the word's meaning in a given context. For example, the word \"grows\" is simply \"grow\" with an \"s\" added to denote a change in verb tense. In many cases, we're interested in the core content of the word. Stemming and lemmatization are the process of getting at the \"core\" of a word. This \"core\" component is often referred to as the *lemma*.\n",
     "\n",
     "Stemming is a rudimentary approach to obtaining the lemma: it simply removes an ending of a word. So, \"grows\" would be stemmed to \"grow\". The word \"running\" would be stemmed to \"run\".\n",
@@ -997,9 +966,23 @@
    "id": "6e2a4cf0-cfd9-4116-94ef-58ef4426b482",
    "metadata": {},
    "source": [
-    "## Challenge 5: Apply a Lemmatizer to Text\n",
+    "---\n",
     "\n",
-    "Lemmatize the tokenized `example2` text using the `nltk`'s `WordNetLemmatizer`."
+    "### Challenge 5: Apply a Lemmatizer to Text\n",
+    "\n",
+    "Lemmatize the tokenized `example2` text using the `nltk`'s `WordNetLemmatizer`.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc687676-4298-4a88-9655-2e77b72b4192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -1007,7 +990,9 @@
    "id": "a429b117-1983-45bf-bdff-d6f0f83a8c22",
    "metadata": {},
    "source": [
-    "## Challenge 6: Putting it All Together\n",
+    "---\n",
+    "\n",
+    "### Challenge 6: Putting it All Together\n",
     "\n",
     "Write a function called `preprocess()` that accepts a string and performs the following preprocessing steps:\n",
     "\n",
@@ -1019,7 +1004,9 @@
     "* Remove stop words.\n",
     "* Lemmatize the tokens.\n",
     "\n",
-    "Apply this function to `sowing_and_reaping`."
+    "Apply this function to `sowing_and_reaping`.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1049,14 +1036,8 @@
    "id": "ca49653f-8700-4681-a50a-43bbb14c124d",
    "metadata": {},
    "source": [
-    "## Powerful Features of `spaCy`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "805c45a8-01e5-4fdb-86e6-2fab0e08543c",
-   "metadata": {},
-   "source": [
+    "## Powerful Features of `spaCy`\n",
+    "\n",
     "We will end this portion of the workshop by examining some of the more powerful features offered by the newer NLP library, `spaCy`. Beside being quite fast, `spaCy` provides very powerful built-in tools in its tokenizer. For example, we automatically get many of the above operations in one fell swoop:"
    ]
   },
