--- a/solutions/01_preprocessing_solutions.ipynb
+++ b/solutions/01_preprocessing_solutions.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "# Use here to create the filepath\n",
-    "text_path = '../data/sowing_and_reaping.txt')\n",
+    "text_path = '../data/sowing_and_reaping.txt'\n",
     "\n",
     "# Open and read the text\n",
     "with open(text_path, 'r') as file:\n",
@@ -47,7 +47,7 @@
     "# Import pandas\n",
     "import pandas as pd\n",
     "# Use pandas to import Tweets\n",
-    "csv_path = '../data/airline_tweets.csv')\n",
+    "csv_path = '../data/airline_tweets.csv'\n",
     "tweets = pd.read_csv(csv_path, sep=',')"
    ]
   },
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example2_path = '../data/example2.txt')\n",
+    "example2_path = '../data/example2.txt'\n",
     "\n",
     "with open(example2_path) as file:\n",
     "    example2 = file.read()"
@@ -69,11 +69,15 @@
    "id": "cd8599eb-1e4d-43db-b62c-dce158a18ce0",
    "metadata": {},
    "source": [
-    "## Challenge 1: Working with Strings\n",
+    "---\n",
+    "\n",
+    "### Challenge 1: Working with Strings\n",
     "\n",
     "* What type of object is `sowing_and_reaping`?\n",
     "* How many characters are in `sowing_and_reaping`?\n",
-    "* How can we get the first 1000 characters of `sowing_and_reaping`?"
+    "* How can we get the first 1000 characters of `sowing_and_reaping`?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -111,14 +115,18 @@
    "id": "7f57a143-8876-4305-b3f1-c77001296919",
    "metadata": {},
    "source": [
-    "## Challenge 2: Reading in Many Files\n",
+    "---\n",
+    "\n",
+    "### Challenge 2: Reading in Many Files\n",
     "\n",
     "The `data` folder contains another folder called `amazon`, which contains many `csv` files of Amazon reviews. Use a `for` loop to read in each dataframe. Do the following:\n",
     "\n",
     "* We've provided a path to the `amazon` folder, and a list of all the file names within the folder using the `os.listdir()` function.\n",
     "* Iterate over all these files, and import them using `pd.read_csv()`. You will need to use `os.path.join()` to create the correct path. Additionally, you need to provide `pandas` with the column names since they are not included in the reviews. We have create the `column_names` variable for you.\n",
     "* Extract the text column from each dataframe, and add then to the `reviews` list. \n",
-    "* How many totals reviews do you obtain?"
+    "* How many totals reviews do you obtain?\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -170,13 +178,17 @@
    "id": "6be9a6e3-4658-4556-9bc6-40e58b2045cd",
    "metadata": {},
    "source": [
-    "## Challenge 3: Text Cleaning with Multiple Steps\n",
+    "---\n",
+    "\n",
+    "### Challenge 3: Text Cleaning with Multiple Steps\n",
     "\n",
     "In Challenge 1, we imported many Amazon reviews, and stored them in a variable called `reviews`. Each element of the list is a string, representing the text of a single review. For each review:\n",
     "\n",
     "* Replace any URLs and digits.\n",
     "* Make all characters lower case.\n",
-    "* Strip all blankspaces."
+    "* Strip all blankspaces.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -231,11 +243,15 @@
    "id": "0fcfa89a-b347-4c5d-b72c-238b901730f0",
    "metadata": {},
    "source": [
-    "## Challenge 4: Tokenizing a Large Text\n",
+    "---\n",
+    "\n",
+    "### Challenge 4: Tokenizing a Large Text\n",
     "\n",
     "Tokenize \"Sowing and Reaping\", which we imported at the beginning of this workshop. Use a method of your choice.\n",
     "\n",
-    "Once you've tokenized, find all the unique words types (you might want the `set` function). Then, sort the resulting `set` object to create a vocabulary (you might want to use the `sorted` function)."
+    "Once you've tokenized, find all the unique words types (you might want the `set` function). Then, sort the resulting `set` object to create a vocabulary (you might want to use the `sorted` function).\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -298,9 +314,13 @@
    "id": "2a5ef86b-3326-4342-919d-f7e7251d12c1",
    "metadata": {},
    "source": [
-    "## Challenge 5: Apply a Lemmatizer to Text\n",
+    "---\n",
     "\n",
-    "Lemmatize the tokenized `example2` text using the `nltk`'s `WordNetLemmatizer`."
+    "### Challenge 5: Apply a Lemmatizer to Text\n",
+    "\n",
+    "Lemmatize the tokenized `example2` text using the `nltk`'s `WordNetLemmatizer`.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -358,7 +378,9 @@
    "id": "390b9de5-7f14-48fa-b818-4e8cfe502d77",
    "metadata": {},
    "source": [
-    "## Challenge 6: Putting it All Together\n",
+    "---\n",
+    "\n",
+    "### Challenge 6: Putting it All Together\n",
     "\n",
     "Write a function called `preprocess()` that accepts a string and performs the following preprocessing steps:\n",
     "\n",
@@ -370,7 +392,9 @@
     "* Remove stop words.\n",
     "* Lemmatize the tokens.\n",
     "\n",
-    "Apply this function to `sowing_and_reaping`."
+    "Apply this function to `sowing_and_reaping`.\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -385,7 +409,7 @@
     "    # Lowercase\n",
     "    text = text.lower()\n",
     "    # Replace URLs\n",
-    "    url_pattern = r'https?:\\/\\/.*[\\r\\n]*'\n",
+    "    url_pattern = r'(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])'\n",
     "    url_repl = ' URL '\n",
     "    text = re.sub(url_pattern, url_repl, text)\n",
     "    # Replace digits\n",
